RESOLVED FIXED 272863
[WebGPU] ComputePassEncoder::setBindGroup crashes under some invalid arguments
https://bugs.webkit.org/show_bug.cgi?id=272863
Summary [WebGPU] ComputePassEncoder::setBindGroup crashes under some invalid arguments
Mike Wyrzykowski
Reported 2024-04-17 16:41:42 PDT
[WebGPU] ComputePassEncoder::setBindGroup crashes under some invalid arguments
Attachments
Mike Wyrzykowski
Comment 1 2024-04-17 22:57:06 PDT
Mike Wyrzykowski
Comment 2 2024-04-17 22:58:25 PDT
EWS
Comment 3 2024-04-18 18:27:12 PDT
Committed 277718@main (5f97395cfff8): <https://commits.webkit.org/277718@main> Reviewed commits have been landed. Closing PR #27436 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.