[WebGPU] ComputePassEncoder::setBindGroup crashes under some invalid arguments https://bugs.webkit.org/show_bug.cgi?id=272863 <radar://126621325>

Reviewed by Tadeu Zagallo.

Fix validation errors which were largely caught at the Metal framework layer
but would result in release crashes if run with the validation layer enabled.

* LayoutTests/TestExpectations:
* LayoutTests/fast/webgpu/fuzz-272863-expected.txt: Added.
* LayoutTests/fast/webgpu/fuzz-272863.html: Added.
Add regression tests, the test passes if it reaches the end.

* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::Device::createBindGroup):
* Source/WebGPU/WebGPU/CommandEncoder.h:
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::ensureBlitCommandEncoder):
(WebGPU::CommandEncoder::beginComputePass):
(WebGPU::CommandEncoder::beginRenderPass):
(WebGPU::CommandEncoder::encoderIsCurrent const):
(WebGPU::CommandEncoder::copyTextureToTexture):
(WebGPU::CommandEncoder::validateFinishError const):
(WebGPU::CommandEncoder::resolveQuerySet):
* Source/WebGPU/WebGPU/ComputePassEncoder.mm:
* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::Device::Device):
* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:
(WebGPU::PresentationContextIOSurface::configure):
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::makeRenderBundleICBWithResources):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:

Canonical link: https://commits.webkit.org/277718@main