Source/WebGPU/WebGPU/BindGroup.mm
@@ -984,7 +984,8 @@ Ref<BindGroup> Device::createBindGroup(const WGPUBindGroupDescriptor& descriptor
                     if (bufferSizeArgumentBufferIndex)
                         *(uint32_t*)[argumentEncoder[stage] constantDataAtIndex:*bufferSizeArgumentBufferIndex] = entrySize;
                 }
-                stageResources[metalRenderStage(stage)][resourceUsage - 1].append(buffer);
+                if (buffer)
+                    stageResources[metalRenderStage(stage)][resourceUsage - 1].append(buffer);
                 stageResourceUsages[metalRenderStage(stage)][resourceUsage - 1].append(makeBindGroupEntryUsageData(usageForBuffer(layoutBinding->type), entry.binding, apiBuffer));
             } else if (samplerIsPresent) {
                 auto* layoutBinding = hasBinding<WGPUSamplerBindingLayout>(bindGroupLayoutEntries, bindingIndex);
@@ -1063,7 +1064,8 @@ Ref<BindGroup> Device::createBindGroup(const WGPUBindGroupDescriptor& descriptor
 
                 if (stage != ShaderStage::Undefined)
                     [argumentEncoder[stage] setTexture:texture atIndex:index];
-                stageResources[metalRenderStage(stage)][resourceUsage - 1].append(texture);
+                if (texture)
+                    stageResources[metalRenderStage(stage)][resourceUsage - 1].append(texture);
                 ASSERT(texture.parentRelativeLevel == apiTextureView.baseMipLevel());
                 ASSERT(texture.parentRelativeSlice == apiTextureView.baseArrayLayer());
                 stageResourceUsages[metalRenderStage(stage)][resourceUsage - 1].append(makeBindGroupEntryUsageData(textureEntry ? usageForTexture(*textureEntry) : (storageTextureEntry ? usageForStorageTexture(*storageTextureEntry) : BindGroupEntryUsage::ConstantTexture), entry.binding, apiTextureView));
